# sammy-actuator

./: .cursorrules  .gitignore  README.md  gunicorn.conf.py  pyproject.toml
actuator/: anthropic_actuator.py  app.py  router.py
actuator/tools/: base.py  collection.py  computer.py  screen_capture.py
actuator/utils/: logger.py
supabase-extension/: browser.4ceded9e.js  browser.e0295443.js  browser.f3047a7d.js  content.883ade9e.js  manifest.json  options.95eda3f3.js  options.html  popup.100f6462.js  popup.df89bfed.css  popup.html
supabase-extension/static/background/: index.js
